# OOP_indie_studio_2018

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists1.txt  Makefile  README.md  bomberman.cbp  c3pm.yml  cmake_install.cmake  libsfml-audio.so.2.5.1
.c3pm/cmake/: CMakeLists.txt
Game/Characters/: ACharacter.cpp  ACharacter.hpp
Game/Display/: Display.cpp
Game/Events/: Events.hpp
SFML/examples/X11Example/: X11Example
SFML/examples/ftp/: ftp
SFML/examples/island/: island
SFML/examples/joystick/: joystick
SFML/examples/opengl/: opengl
SFML/examples/pong/: pong
SFML/examples/shader/: shader
SFML/examples/sockets/: sockets
SFML/examples/sound/: sound
SFML/examples/sound-capture/: sound-capture
SFML/examples/voip/: voip
SFML/examples/window/: window
Scene/: CMakeLists.txt
Scene/srcs/: GameScene.cpp  GameScene.hpp  IScene.hpp  MenuScene.cpp  MenuScene.hpp  SceneManager.cpp  SceneManager.hpp  SceneManagerException.cpp  SceneManagerException.hpp  main.cpp
cmake/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt
cmake/KF5Archive/: KF5ArchiveConfig.cmake  KF5ArchiveQchTargets.cmake  KF5ArchiveTargets-noconfig.cmake
cmake/KF5Auth/: KF5AuthConfig.cmake  KF5AuthQchTargets.cmake  KF5AuthToolsTargets-noconfig.cmake
cmake/KF5Bookmarks/: KF5BookmarksConfig.cmake  KF5BookmarksQchTargets.cmake  KF5BookmarksTargets-noconfig.cmake
cmake/KF5Codecs/: KF5CodecsTargets-noconfig.cmake
cmake/KF5Completion/: KF5CompletionConfig.cmake  KF5CompletionQchTargets.cmake  KF5CompletionTargets-noconfig.cmake
cmake/KF5Config/: KF5ConfigConfig.cmake
cmake/KF5ConfigWidgets/: KF5ConfigWidgetsQchTargets.cmake  KF5ConfigWidgetsTargets-noconfig.cmake
cmake/KF5DBusAddons/: KF5DBusAddonsTargets-noconfig.cmake
cmake/KF5GuiAddons/: KF5GuiAddonsTargets-noconfig.cmake
cmake/KF5IconThemes/: KF5IconThemesQchTargets.cmake
cmake/KF5JobWidgets/: KF5JobWidgetsConfig.cmake
cmake/KF5KIO/: KF5KIOQchTargets.cmake
cmake/KF5NewStuff/: KF5NewStuffQchTargets.cmake
cmake/KF5Notifications/: KF5NotificationsConfig.cmake  KF5NotificationsQchTargets.cmake
cmake/KF5NotifyConfig/: KF5NotifyConfigQchTargets.cmake
cmake/KF5Parts/: KF5PartsConfig.cmake
cmake/KF5Pty/: KF5PtyConfig.cmake
cmake/KF5Service/: KF5ServiceConfig.cmake  KF5ServiceQchTargets.cmake
cmake/KF5Solid/: KF5SolidConfig.cmake  KF5SolidTargets-noconfig.cmake
cmake/KF5Sonnet/: KF5SonnetTargets-noconfig.cmake
cmake/KF5Wallet/: KF5WalletConfig.cmake  KF5WalletQchTargets.cmake
cmake/KF5WidgetsAddons/: KF5WidgetsAddonsTargets-noconfig.cmake
cmake/KF5WindowSystem/: KF5WindowSystemTargets-noconfig.cmake
cmake/KF5XmlGui/: KF5XmlGuiTargets-noconfig.cmake  KF5XmlGuiTargets.cmake
cmake/LibIcal/: LibIcalTargets.cmake
cmake/OpenAL/: OpenALConfig.cmake
cmake/PolkitQt5-1/: PolkitQt5-1Targets-noconfig.cmake
cmake/Qt5Core/: Qt5CoreConfig.cmake
cmake/Qt5Gui/: Qt5GuiConfig.cmake  Qt5GuiConfigExtras.cmake
cmake/Qt5MultimediaWidgets/: Qt5MultimediaWidgetsConfig.cmake
cmake/Qt5OpenGLExtensions/: Qt5OpenGLExtensionsConfig.cmake
cmake/Qt5QuickTest/: Qt5QuickTestConfig.cmake
cmake/Qt5QuickWidgets/: Qt5QuickWidgetsConfig.cmake
cmake/Qt5Widgets/: Qt5WidgetsConfig.cmake  Qt5Widgets_QBB10StylePlugin.cmake  Qt5Widgets_QMotifStylePlugin.cmake
cmake/SDL2/: SDL2Targets-noconfig.cmake
cmake/dbusmenu-qt5/: dbusmenu-qt5-targets-noconfig.cmake
cmake/double-conversion/: double-conversionTargets-noconfig.cmake  double-conversionTargets.cmake
cmake/phonon4qt5/: Phonon4Qt5Config.cmake  PhononTargets-noconfig.cmake
irrlicht.app/Contents/: Info.plist
irrlicht.app/Contents/Resources/: icon.icns
irrlichtTest/: a.out  test.cpp
logic/: CEventReceiver.cpp  CEventReceiver.hpp  codeBase.cpp
modules/cmake/KF5Attica/: KF5AtticaConfig.cmake  KF5AtticaQchTargets.cmake  KF5AtticaTargets-noconfig.cmake
modules/cmake/KF5Auth/: KF5AuthTargets-noconfig.cmake  KF5AuthTargets.cmake
modules/cmake/KF5Codecs/: KF5CodecsConfig.cmake  KF5CodecsQchTargets.cmake
modules/cmake/KF5Config/: KF5ConfigCompilerTargets-noconfig.cmake  KF5ConfigQchTargets.cmake  KF5ConfigTargets-noconfig.cmake
modules/cmake/KF5ConfigWidgets/: KF5ConfigWidgetsConfig.cmake
modules/cmake/KF5CoreAddons/: KF5CoreAddonsConfig.cmake  KF5CoreAddonsQchTargets.cmake  KF5CoreAddonsTargets-noconfig.cmake  KF5CoreAddonsToolingTargets-noconfig.cmake
modules/cmake/KF5Crash/: KF5CrashConfig.cmake  KF5CrashQchTargets.cmake  KF5CrashTargets-noconfig.cmake
modules/cmake/KF5DBusAddons/: KF5DBusAddonsConfig.cmake  KF5DBusAddonsQchTargets.cmake
modules/cmake/KF5GlobalAccel/: KF5GlobalAccelConfig.cmake  KF5GlobalAccelQchTargets.cmake  KF5GlobalAccelTargets-noconfig.cmake
modules/cmake/KF5GuiAddons/: KF5GuiAddonsConfig.cmake  KF5GuiAddonsQchTargets.cmake
modules/cmake/KF5I18n/: KF5I18nConfig.cmake  KF5I18nQchTargets.cmake  KF5I18nTargets-noconfig.cmake
modules/cmake/KF5IconThemes/: KF5IconThemesConfig.cmake  KF5IconThemesTargets-noconfig.cmake
modules/cmake/KF5ItemModels/: KF5ItemModelsConfig.cmake  KF5ItemModelsQCHTargets.cmake  KF5ItemModelsTargets-noconfig.cmake
modules/cmake/KF5ItemViews/: KF5ItemViewsConfig.cmake  KF5ItemViewsQCHTargets.cmake  KF5ItemViewsTargets-noconfig.cmake
modules/cmake/KF5JobWidgets/: KF5JobWidgetsQchTargets.cmake  KF5JobWidgetsTargets-noconfig.cmake
modules/cmake/KF5KIO/: KF5KIOConfig.cmake  (+1 more)
resources/maps/: 1  1Ground  1Wall  3  map_rules
srcs/: main.cpp
srcs/Characters/: ACharacter.cpp  ACharacter.hpp  Player.cpp  Player.hpp
srcs/Core/: Bomberman.cpp  Bomberman.hpp
srcs/Display/: IDisplay.hpp  IDisplayLoader.hpp  IrrlichtDisplay.cpp  IrrlichtDisplay.hpp  IrrlichtDisplayLoader.cpp  IrrlichtDisplayLoader.hpp
srcs/Events/: Events.cpp  Events.hpp
srcs/Game/: ISceneManager.hpp  PauseMenu.cpp  PauseMenu.hpp
srcs/Logic/: AGame.hpp  BombermanGame.cpp  BombermanGame.hpp
srcs/Map/: ATile.hpp  IMap.hpp  Map.cpp  Map.hpp  MapData.hpp
srcs/Menu/: IMenu.hpp  Menu.cpp  Menu.hpp
srcs/Objects/: Bomb.cpp  Bomb.hpp  PowerUps.cpp
srcs/Tool/: Reader.cpp  Reader.hpp  SpriteInfo.hpp
srcs/mapGeneration/: generate.cpp
(+156 files in other folders)
